--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ header {
   margin: 1.3rem 0 0 0;
 }
 
-.main-product {
+main .main-product {
   background: linear-gradient(176.11deg, #DEDCE4 24.83%, #A5B1C7 69.6%);
   padding: 0 0 15.1rem 0;
 }
@@ -962,9 +962,11 @@ header {
 
 .albom {
   width: 100%;
-  height: 100%;
+}
+.albom__wrap {
   padding: 7.7rem 0 2.4rem 0;
   background-color: #ffffff;
+  overflow: hidden;
 }
 .albom__list {
   display: flex;
